# gcode

./: Cargo.toml  README.md
gcode/: Cargo.toml
gcode-bench-stm32g0/: Cargo.toml  README.md
gcode-bench-stm32g0/.cargo/: config.toml
gcode-bench-stm32g0/src/: lib.rs  max.gcode  min.gcode
gcode/src/: block.rs
src/: decimal.rs  lib.rs  sign.rs  significand.rs
