[package]
name = "gcode-bench-stm32g0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4.0"
gcode = { path = "../gcode", features = ["defmt"] }
panic-probe = "0.3"
stm32-metapac = { version = "1.0", features = ["memory-x", "stm32g031k8"] }

[features]
mul10_by_shl = ["gcode/mul10_by_shl"]

[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = true
opt-level = 3
